// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Async Select 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                    style="transform: translate(-NaNpx,-0px);"
                  >
                    <label
                      class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 gFNDOJ"
                      color="shade.980"
                      data-testid="ds-text"
                      value="oranges"
                      width="auto"
                    >
                      Fruits
                    </label>
                  </div>
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                  >
                    <input
                      class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                      data-testid="ds-text-input"
                      placeholder="Select"
                      type="text"
                      value="oranges"
                    />
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                        fill="rgba(22, 47, 86, 0.38)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Select Grouped Select 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                  >
                    <label
                      class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                      color="shade.980"
                      data-testid="ds-text"
                      value=""
                      width="auto"
                    >
                      Fruits
                    </label>
                  </div>
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                  >
                    <input
                      class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                      data-testid="ds-text-input"
                      placeholder="Select"
                      type="text"
                      value=""
                    />
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                        fill="rgba(22, 47, 86, 0.38)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Select Select With Controls 1`] = `
<div>
  <div>
    <div>
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
            >
              <div
                class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
              >
                <div
                  class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
                >
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
                  >
                    <label
                      class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                      color="shade.980"
                      data-testid="ds-text"
                      value=""
                      width="auto"
                    >
                      Fruits
                    </label>
                  </div>
                  <div
                    class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
                  >
                    <input
                      class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                      data-testid="ds-text-input"
                      placeholder="Select Fruits"
                      type="text"
                      value=""
                    />
                    <svg
                      fill="none"
                      height="16"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
                        fill="rgba(22, 47, 86, 0.38)"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;
